--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ body, html {
         }
 #game {
     display: flex;
-    flex-direction: column;
+    flex-wrap: nowrap;
     height: 100vh;
 }
 
@@ -112,14 +112,17 @@ body, html {
     width: 25%;
     display: flex;
     flex-direction: column;
-    flex-grow: 1; /* Garante que ocupe toda a altura disponível */
+    height: 100vh; /* Ocupa toda a altura da tela */
+    box-sizing: border-box;
 }
 
 .geral-panel {
-    width: 100%; /* Ocupa toda a largura abaixo das colunas */
+    width: calc(75%); /* Ocupa a largura combinada das left e center columns */
     background-color: #c9c9c9;
     padding: 10px;
-    margin-top: 20px;
+    position: absolute; /* Posiciona fora do fluxo normal */
+    bottom: 0; /* Alinha ao fundo */
+    left: 0; /* Alinha à esquerda, garantindo que fique abaixo das colunas left e center */
     box-sizing: border-box;
 }
         .resource-panel {
