--- a/styles.css
+++ b/styles.css
@@ -90,20 +90,16 @@ body, html {
     height: 100vh;
 }
 
-.top-section {
-    display: flex;
-    flex: 1;
-    width: 100%;
-}
-
-.left-column {
+left-column {
     width: 30%;
+    height: 50%;
     display: flex;
     flex-direction: column;
 }
 
 .center-column {
     width: 45%;
+    height: 50%;
     display: flex;
     flex-direction: column;
 }
@@ -117,6 +113,7 @@ body, html {
 }
 
 .geral-panel {
+    height: 50%;
     width: calc(75%); /* Ocupa a largura combinada das left e center columns */
     background-color: #c9c9c9;
     padding: 10px;
