--- a/styles.css
+++ b/styles.css
@@ -77,60 +77,78 @@
 #dadosGenerationPanel .progress {
   background-color: var(--dados-color);
 }
+
 body, html {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            overflow: hidden;
-        }
-        #game {
-            display: flex;
-            height: 100vh;
-        }
-        .left-column {
-            display: flex;
-            flex-direction: column;
-            width: 30%;
-        }
-        .center-column {
-            display: flex;
-            flex-direction: column;
-            width: 45%;
-        }
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    overflow: hidden;
+}
+
+#game {
+    display: flex;
+    height: 100vh;
+}
+
+.left-section {
+    display: flex;
+    flex-direction: column;
+    width: 75%;
+    height: 100vh;
+}
+
+.top-half {
+    display: flex;
+    height: 50%;
+}
+
+.left-column {
+    width: 40%;
+    height: 100%;
+}
+
+.center-column {
+    width: 60%;
+    height: 100%;
+}
+
+.bottom-half {
+    height: 50%;
+}
+
 .right-column {
     width: 25%;
     height: 100vh;
     overflow-y: auto;
 }
 
-
-        .resource-panel {
-/* 	    z-index: 1 */
-            flex: 1;
-            background-color: #c9c9c9;
-            padding: 10px;
-            display: flex;
-            flex-direction: column;
-            overflow-y: auto;
-        }
-.bottom-panel {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 75%; /* Largura igual à soma das larguras da left-column e center-column */
+.resource-panel {
+    height: 100%;
     background-color: #c9c9c9;
     padding: 10px;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
 }
-        .click-panel {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            padding: 10px;
-	    background-color: #c9c9c9;
-        }
+
+.click-panel {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    background-color: #c9c9c9;
+}
+
+.bottom-panel {
+    height: 100%;
+    background-color: #c9c9c9;
+    padding: 10px;
+    overflow-y: auto;
+}
+
         .generation-panel {
 	
             border: 1px solid #ccc;
