--- a/styles.css
+++ b/styles.css
@@ -122,6 +122,8 @@ body, html {
     height: 100vh;
     overflow-y: auto;
     display: flex;
+   flex-direction: column;
+
 }
 
 .resource-panel {
