--- a/styles.css
+++ b/styles.css
@@ -118,11 +118,15 @@ body, html {
 }
 
 .right-column {
-    width: 25%;
+/*     width: 25%;
     height: 100vh;
     overflow-y: auto;
     display: flex;
-   flex-direction: column;
+   flex-direction: column; */
+	    width: 25%;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1; /* Garante que ocupe toda a altura disponível */
 
 }
 
