--- a/styles.css
+++ b/styles.css
@@ -313,6 +313,12 @@ body, html {
             box-shadow: #121212 0 0 0 3px, transparent 0 0 0 0;
             background-color: #f0f0f0;
         }
+
+	.ativ-button.active {
+            box-shadow: #121212 0 0 0 3px, transparent 0 0 0 0;
+            background-color: #f0f0f0;
+        }
+
 .progress-bar {
     width: 100%;
     height: 20px;
