--- a/styles.css
+++ b/styles.css
@@ -89,14 +89,14 @@ body, html {
 }
 
 
-.resource-buttons {
+.unlock-buttons {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 0.5cm 0;
 }
 
-.resource-btn {
+.unlock-btn {
     width: 40px;
     height: 40px;
     padding: 5px;
@@ -106,7 +106,7 @@ body, html {
     border-radius: 5px;
 }
 
-.resource-btn:hover {
+.unlock-btn:hover {
     background-color: #e0e0e0;
 }
 
