--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@
 /* Conhecimento */
 #conhecimentoGenerationPanel {
 /*     background-image: url('Conhecimento.png'); */
-    background-color:b8d5fd;
+    background-color:#b8d5fd;
     background-size: cover;
     background-position: center;
     flex: 1;
@@ -29,7 +29,7 @@
 /* Dados */
 #dadosGenerationPanel {
 /*     background-image: url('Data.png'); */
-    background-color:fdf7b8;
+    background-color:#fdf7b8;
     background-size: cover;
     background-position: center;
 	    flex: 1;
@@ -38,7 +38,7 @@
 /* Grana */
 #granaGenerationPanel {
 /*     background-image: url('Grana.png'); */
-    background-color:cbfdb8;
+    background-color:#cbfdb8;
     background-size: cover;
     background-position: center;
 	    flex: 1;
@@ -47,7 +47,7 @@
 /* Código */
 #codigoGenerationPanel {
 /*     background-image: url('Code.png'); */
-    background-color:f1f1f1;
+    background-color:#f1f1f1;
     background-size: cover;
     background-position: center;
 	    flex: 1;
