--- a/styles.css
+++ b/styles.css
@@ -292,7 +292,7 @@ body, html {
 #granaPanel .panel-title {
   background-color: var(--grana-color);
 }
-#Panel .panel-title {
+#codigoPanel .panel-title {
   background-color: var(---color);
 }
 #dadosPanel .panel-title {
