--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@
     transform: translateY(-50px);
     opacity: 0;
   }
+}
 
 ///////////////////////////////////////// coin ////////////////////////////////
 
