--- a/styles.css
+++ b/styles.css
@@ -424,8 +424,10 @@ body, html {
 }
       
 #clickable {
-  width: 250px;
-  height: 250px;
+/*   width: 250px;
+  height: 250px; */
+width: 100%;
+height: 100%;
   background-image: url(PC2.png);
   background-size: contain;
   background-repeat: no-repeat;
