--- a/styles.css
+++ b/styles.css
@@ -264,7 +264,7 @@ body, html {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 10px;
+/*     padding: 10px; */
     background-color: #c9c9c9;
 }
 
