--- a/styles.css
+++ b/styles.css
@@ -7,41 +7,6 @@
 }
 
 
-///////////////////////////////////////// coin ////////////////////////////////
-
-.coin {
-  position: absolute;
-  display: flex;
-  align-items: center;
-  font-size: 20px;
-  color: #1E90FF; /* Azul para o ícone */
-  animation: floatUp 1s ease-out forwards;
-  pointer-events: none;
-  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5); /* Sombra para destacar o ícone */
-}
-
-.value {
-  font-size: 16px;
-  font-weight: bold;
-  color: black;
-  margin-left: 5px; /* Espaço entre o ícone e o valor */
-  opacity: 1;
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4); /* Sombra para destacar o valor */
-}
-
-@keyframes floatUp {
-  0% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-  100% {
-    transform: translateY(-50px);
-    opacity: 0;
-  }
-}
-
-///////////////////////////////////////// coin ////////////////////////////////
-
 .resource-counter,
 .production-label,
 .generation-title,
@@ -259,13 +224,11 @@ body, html {
 }
 
 .click-panel {
-    position: relative;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-/*     padding: 10px; */
     background-color: #c9c9c9;
 }
 
@@ -425,11 +388,8 @@ body, html {
 }
       
 #clickable {
-/*   width: 250px;
-  height: 250px; */
-width: 100%;
-height: 100%;
-position: relative;
+  width: 250px;
+  height: 250px;
   background-image: url(PC2.png);
   background-size: contain;
   background-repeat: no-repeat;
@@ -441,6 +401,7 @@ position: relative;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
 }
+
 #clickable:active {
   transform: scale(0.95);
 }
